# daven

./: .gitignore  Cargo.toml  README.md  system_build_tasks.json  system_build_tasks.yaml
apps/api-gateway/: Cargo.toml
apps/api-gateway/src/: main.rs
apps/frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo
apps/frontend/src/: App.tsx  styles.css
infra/db/migrations/: 0001_init.sql
infra/docker/: docker-compose.yml
libs/config/: Cargo.toml
libs/config/src/: lib.rs
libs/domain-models/: Cargo.toml
libs/domain-models/src/: assessment.rs  asset.rs  board.rs  detection.rs  geo.rs  lib.rs  recommendation.rs  target.rs  task.rs
libs/event-contracts/: Cargo.toml
libs/event-contracts/src/: lib.rs
scripts/: demo_down.sh  demo_up.sh  seed_demo.sh
services/assessment-service/: Cargo.toml
services/assessment-service/src/: main.rs
services/asset-service/: Cargo.toml
services/asset-service/src/: main.rs
services/execution-adapter/: Cargo.toml
services/execution-adapter/src/: main.rs
services/ingest-service/: Cargo.toml
services/ingest-service/src/: main.rs
services/planning-service/: Cargo.toml
services/planning-service/src/: main.rs
services/recommendation-service/: Cargo.toml
services/recommendation-service/src/: main.rs
services/workflow-service/: Cargo.toml
services/workflow-service/src/: main.rs
specs/: Daven v001 Agent Instructions.md  Daven v001 Architecture.md  Daven v001 Codex Workorders.md  Daven v001 Spec.md  Daven v001 Work Tickets.md
