[package]
name = "assessment-service"
edition.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
axum.workspace = true
chrono.workspace = true
config = { path = "../../libs/config" }
domain-models = { path = "../../libs/domain-models", package = "domain-models" }
event-contracts = { path = "../../libs/event-contracts", package = "event-contracts" }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
